--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-cors-headers==3.8.0
 djangorestframework==3.12.4
 gunicorn==20.1.0
 psycopg2==2.9.1
+PyJWT==2.1.0
 python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1
